<resources>
    <string name="app_name">Ads Board</string>
    <string name="app_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_inters_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <!-- Menu Drawer Strings -->
    <string name="category_ads">Category Ads</string>
    <string name="my_ads">My Ads</string>
    <string name="main_ads_screen">Ads main screen</string>
    <string name="ads_car">Cars</string>
    <string name="ads_pc">PC</string>
    <string name="ads_smartphone">Smartphones</string>
    <string name="ads_household_appliance">Household appliances</string>
    <string name="category_settings">Settings Account</string>
    <string name="set_ac_sign_up">Registration</string>
    <string name="set_ac_sign_in">Sign in</string>
    <string name="set_ac_sign_out">Sign out</string>
    <string name="not_regs">Log in or register!</string>
    <!-- Sing Dialog -->
    <string name="sign_title">Sign Title</string>
    <string name="sign_email_hint">Email</string>
    <string name="sign_email_desc">Email :</string>
    <string name="sign_email_reset_psswrd_send">Password recovery email has been sent</string>
    <string name="sign_psswrd_hint">Password</string>
    <string name="sign_in_google_acc_action">Login with google account</string>
    <string name="sign_up_action">Make registration</string>
    <string name="sign_in_action">Login</string>
    <string name="sign_psswrd_forget">Are you forgot password?</string>
    <string name="sign_up_error">Failed to register</string>
    <string name="sign_in_error">Failed to login</string>
    <string name="sign_up_send_email">Confirmation email sent to you, please confirm your registration</string>
    <string name="sign_up_error_send_email">Failed to send email</string>
    <string name="sign_in_anonym">Quest user</string>
    <string name="tx_view_message">Please specify the email address for password recovery</string>
    <!-- Other Strings -->
    <string name="user_avatar">User avatar</string>
    <string name="text_view_user">example@example.com</string>
    <string name="text_default">View text</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tx_yes">Yes</string>
    <string name="tx_no">No</string>
    <string name="login_accept">Login successfully completed</string>
    <string name="connect_done">Email successfully connect to Google account</string>
    <string name="you_need_signin_google">You must SignIn to Google account</string>
    <!-- Main New Ads and Bottom Main Menu Strings -->
    <string name="new_ad">New ad</string>
    <string name="filter">Filter</string>
    <string name="my_favorite_ads">My favors ads</string>
    <string name="home_bottom_main_menu">Home bottom menu</string>
    <!-- Edit Ads -->
    <string name="desc_edit_ad">Edit ad page</string>
    <string name="desc_country_select">Select country</string>
    <string name="spinner_country_item">Country item</string>
    <string name="spinner_no_matches">No matches</string>
    <string name="select_country">*Select country</string>
    <string name="no_selected_country">You must select a country!</string>
    <string name="select_city">*Select city</string>
    <string name="image_search_button">Image Search Button</string>
    <string name="image_delete_button">Delete</string>
    <string name="image_add_button">ADD</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="progressbar_load">Loading…  Please wait… </string>
    <string name="vw_text_country">Country :</string>
    <string name="vw_text_city">City :</string>
    <string name="vw_text_zipcode">Zipcode :</string>
    <string name="select_zipcode">*Input zipcode</string>
    <!--<string name="vw_text_phone">Phone :</string>
    <string name="select_phone">*Input phone</string>-->
    <string name="vw_text_phone">Phone :</string>
    <string name="select_phone">*Input Phone</string>
    <string name="vw_text_email">Email :</string>
    <string name="input_email">Input Email</string>
    <string name="vw_text_title_ad">Ad`s Title</string>
    <string name="input_title_ad">*Input ad`s title</string>
    <string name="vw_text_category">Category</string>
    <string name="select_category">*Select category</string>
    <string name="vw_text_price">Price :</string>
    <string name="input_price">*Input price</string>
    <string name="vw_text_description">Description :</string>
    <string name="input_description">*Input description</string>
    <string name="vw_text_delivery">Delivery :</string>
    <string name="choose_delivery">With delivery</string>
    <string name="vw_text_publish">Publish</string>
    <string name="vw_text_filter_apply">Apply</string>
    <string name="vw_text_count_default">0</string>
    <string name="ad_list_element_descr_default">Default description</string>
</resources>