<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/category_ads">
        <menu>
            <item android:title="@string/my_ads"
                android:id="@+id/id_my_ads"
                />
            <item android:title="@string/ads_car"
                android:id="@+id/id_ads_car"
                />
            <item android:title="@string/ads_pc"
                android:id="@+id/id_ads_pc"
                />
            <item
                android:id="@+id/id_ads_smartphone"
                android:title="@string/ads_smartphone" />
            <item android:title="@string/ads_household_appliance"
                android:id="@+id/id_ads_household_appliance"
                />
        </menu>
    </item>

    <item android:title="@string/category_settings">
        <menu>
            <item android:title="@string/set_ac_sign_up"
                android:id="@+id/id_set_ac_sign_up"
                />
            <item android:title="@string/set_ac_sign_in"
                android:id="@+id/id_set_ac_sign_in"
                />
            <item android:title="@string/set_ac_sign_out"
                android:id="@+id/id_set_ac_sign_out"
                />
        </menu>
    </item>
</menu>