<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/new_ad"
        android:icon="@drawable/ic_new_ads"
        android:id="@+id/id_new_ad"
        android:orderInCategory="400"
    />
    <item
        android:title="@string/my_ads"
        android:icon="@drawable/ic_my_ads"
        android:id="@+id/id_my_ads"
        android:orderInCategory="300"
        />
    <item
        android:title="@string/my_favorite_ads"
        android:icon="@drawable/ic_favorite_normal"
        android:id="@+id/id_my_favorite_ads"
        android:orderInCategory="200"
        />
    <item
        android:title="@string/home_bottom_main_menu"
        android:icon="@drawable/ic_home"
        android:id="@+id/id_home_bottom_main_menu"
        android:orderInCategory="100"
        />
</menu>