<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tViewSignTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/set_ac_sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txViewDialogMssg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/tx_view_message"
        android:textColor="@color/my_color_red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/editTxSignEmail"
        app:layout_constraintStart_toStartOf="@+id/editTxSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/tViewSignTitle" />

    <EditText
        android:id="@+id/editTxSignEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:ems="10"
        android:hint="@string/sign_email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txViewDialogMssg"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTxSignPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:ems="10"
        android:hint="@string/sign_psswrd_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/editTxSignEmail"
        app:layout_constraintStart_toStartOf="@+id/editTxSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTxSignEmail"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/bttnSignInGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_google_acc_action"
        app:buttonSize="standard"
        app:layout_constraintEnd_toEndOf="@+id/bttnSignUpSignIn"
        app:layout_constraintStart_toStartOf="@+id/bttnSignUpSignIn"
        app:layout_constraintTop_toBottomOf="@+id/editTxSignPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bttnSignUpSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/common_google_signin_btn_text_light"
        android:shadowColor="@color/color_header_main"
        android:text="@string/sign_up_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTxSignEmail"
        app:layout_constraintStart_toStartOf="@+id/editTxSignPassword"
        app:layout_constraintTop_toBottomOf="@+id/bttnSignInGoogle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bttnFogotRsswrd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_psswrd_forget"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTxSignEmail"
        app:layout_constraintStart_toStartOf="@+id/editTxSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/bttnSignUpSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>