<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_header_main"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarMainStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/ads_car"
        app:titleTextColor="@color/surface_color_pix" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVmainContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/my_color_light_grayblue"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/bttmNavVwMainContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAds"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bttmNavVwMainContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_header_main"
        app:itemIconTint="@drawable/botton_nav_selector"
        app:itemTextColor="@color/surface_color_pix"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/botton_main_menu" />

    <LinearLayout
        android:id="@+id/layoutNoFavorAds"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/RVmainContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAds">

        <ImageView
            android:id="@+id/imgVwNoFavorAds"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/vw_text_description"
            app:srcCompat="@drawable/ic_empty" />

        <TextView
            android:id="@+id/txVwNoFavorAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/spinner_no_matches"
            android:textAlignment="center"
            android:textColor="@color/my_color_dark_blue_tx"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>