<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/textview"
                android:textColor="@color/color_header_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageBttnDragDrop"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"></LinearLayout>

            <ImageView
                android:id="@+id/imageViewContent"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_margin="10dp"
                android:background="@color/my_color_light_grayblue"
                android:contentDescription="@string/todo"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <ImageButton
                android:id="@+id/imageBttnDragDrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/user_avatar"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_drag_drop" />

            <ImageButton
                android:id="@+id/bttnEditImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/desc_edit_ad"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/bttnImageDel"
                app:layout_constraintEnd_toStartOf="@+id/bttnImageDel"
                app:srcCompat="@drawable/ic_edit"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/bttnImageDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/desc_edit_ad"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewContent"
                app:layout_constraintEnd_toEndOf="@+id/imageViewContent"
                app:srcCompat="@drawable/ic_delete_image" />

            <ProgressBar
                android:id="@+id/progrBarSingleimage"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewContent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageViewContent"
                app:layout_constraintTop_toTopOf="@+id/imageViewContent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
